overflow fix

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,14 @@
 :root {
   --animate-delay: 2s;
 }
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
 body {
   background-color: #e8e8e8;
   margin: 0;
@@ -58,7 +66,6 @@ i {
   background-color: #185adb;
 }
 #navbar {
-  overflow: hidden;
   background-color: #0082bf;
   display: flex;
   justify-content: space-around;
@@ -455,7 +462,7 @@ textarea {
     width: 220px;
   }
   .contact-head span {
-    width: 200px;
+    width: 100px;
   }
   /* .contact-other-div {
     padding-left: 10px;
